--- a/style.css
+++ b/style.css
@@ -42,8 +42,46 @@ img {
   padding: 10px 20px;
 }
 
-nav {
+.navigation {
   font-size: 0.8em;
+  background: #ecc30b;
+  padding: 16px;
+  border-radius: 15px;
+}
+
+.navigation__link {
+  color: white;
+  display: inline-block;
+  background: orange;
+  margin-right: 20px;
+}
+
+.navigation__link--homepage {
+  background: orchid;
+  color: black;
+}
+
+.article {
+  padding: 16px;
+  border: 5px #ccc solid;
+  background: rgba(20, 40, 53, 0.7);
+  border-radius: 15px;
+}
+
+.article__description {
+  background: rgba(20, 53, 33, 0.8);
+}
+
+.article__description--special {
+  border: 3px solid tomato;
+}
+
+.article__title {
+  background: rgba(12, 144, 231, 0.2);
+  color: #ffffff;
+  text-align: justify;
+  padding: 10px 20px;
+  text-shadow: 1px 1px 0 #000000;
 }
 
 .logo {
@@ -64,13 +102,9 @@ nav {
 }
 
 .section-header {
-  color: tomato;
-}
-
-.section-header {
   color: limegreen;
 }
 
 .article-header {
-  color: aqua;
+  color: rgb(255, 0, 242);
 }
