--- a/style.css
+++ b/style.css
@@ -1,88 +1,111 @@
 body {
-  width: 50%;
-  background: #fefefe;
+  background-color: rgba(255, 255, 255, 0.2);
   background-image: url("images/mega_logo_30deg.png");
   background-size: 120px;
+  background-blend-mode: color;
   font-family: "Helvetica", "Arial", "sans-serif";
   font-size: 16px;
-  margin: auto;
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12px;
+  color: #fff;
+}
+.header {
+  background: orange; 
+  border-radius: 12px;
+  opacity: 0.7;
+  margin-bottom: 4px;
 }
 
-header {
-  background: #ecc30b;
-  border-radius: 15px;
+.company-name {
+  padding: 12px;
 }
 
-section {
-  background: rgba(20, 40, 53, 0.5);
-  border-radius: 15px;
-}
-
-article {
-  background: rgba(20, 40, 53, 0.7);
-  border-radius: 15px;
-}
-
-h1,
-h2,
-h3,
-p {
-  color: #ffffff;
-  text-align: justify;
-  padding: 10px 20px;
-  text-shadow: 1px 1px 0 #000000;
-}
-
-footer {
-  font-size: 0.8em;
-}
-
-img {
-  width: 40%;
-  padding: 10px 20px;
+.company-name__motto {
+  padding: 12px;
 }
 
 .navigation {
-  font-size: 0.8em;
-  background: #ecc30b;
-  padding: 16px;
-  border-radius: 15px;
+  font-size: 1.2em;
+  background: orange;
+  padding: 12px;
+  border-radius: 12px;
 }
 
 .navigation__link {
-  color: white;
   display: inline-block;
-  background: orange;
-  margin-right: 20px;
+  padding: 8px 16px;
 }
 
-.navigation__link--homepage {
-  background: orchid;
-  color: black;
+.navigation__link--selected {
+  background: rgba(255, 0, 0, 0.5);  
+  border-radius: 10px;
 }
 
-.article {
-  padding: 16px;
-  border: 5px #ccc solid;
-  background: rgba(20, 40, 53, 0.7);
-  border-radius: 15px;
+.company-name {
+  font-size: 2em;
+  padding-bottom: 0;
+}
+
+.section, .footer {
+  border: 4px solid tomato;
+  border-radius: 12px;
+  margin-bottom: 4px;
+  background: orange;;
+  opacity: 0.7;
+  padding: 12px;
 }
 
 .article__description {
-  background: rgba(20, 53, 33, 0.8);
+  background: rgba(255, 0, 0, 0.5);
+  padding: 16px;
+  margin: 4px;
+  border-radius: 12px;
 }
 
 .article__description--special {
-  border: 3px solid tomato;
+  border: 4px dotted yellow;
 }
 
 .article__title {
-  background: rgba(12, 144, 231, 0.2);
-  color: #ffffff;
-  text-align: justify;
-  padding: 10px 20px;
-  text-shadow: 1px 1px 0 #000000;
+  color: red;
+  width: 100%;
+  text-align: center;
 }
+
+.wrapper {
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.article__image {
+  background: blue;
+  width 40%;
+  padding: 10px 20px;
+  display: inline-block;
+}
+
+  /* praca domowa - pusty na potrzeby przechwycenia przez JS i dodanie treści*/
+  .empty {
+    background: orange;
+    opacity: 0.7;
+    border-radius: 15px;
+    font-size: 12px;
+    color: greenyellow;
+    padding: 2px 16px;
+    text-align: center;
+    }
+
+
+
+
+
+img {
+  width: 40%;
+}
+
 
 .logo {
   height: 200px;
@@ -92,14 +115,12 @@ img {
   margin-right: auto;
 }
 
+/* niepotrzebe będzie
 .article-with-img {
   display: flex;
   align-items: center;
-}
+} */
 
-.company-name {
-  font-size: 2em;
-}
 
 .section-header {
   color: limegreen;
@@ -108,3 +129,6 @@ img {
 .article-header {
   color: rgb(255, 0, 242);
 }
+
+
+
