--- a/style.css
+++ b/style.css
@@ -12,17 +12,25 @@ body {
   color: #fff;
 }
 .header {
-  background: orange; 
+  background: orange;
   border-radius: 12px;
   opacity: 0.7;
   margin-bottom: 4px;
+}
+
+.header__logo {
+  height: 30px;
+  display: inline-block;
+  float: right;
+  margin-right: 12px;
+  padding-top: 6px;
 }
 
 .company-name {
   padding: 12px;
 }
 
-.company-name__motto {
+.company-name__subtext {
   padding: 12px;
 }
 
@@ -39,7 +47,7 @@ body {
 }
 
 .navigation__link--selected {
-  background: rgba(255, 0, 0, 0.5);  
+  background: rgba(255, 0, 0, 0.5);
   border-radius: 10px;
 }
 
@@ -48,11 +56,12 @@ body {
   padding-bottom: 0;
 }
 
-.section, .footer {
+.section,
+.footer {
   border: 4px solid tomato;
   border-radius: 12px;
   margin-bottom: 4px;
-  background: orange;;
+  background: orange;
   opacity: 0.7;
   padding: 12px;
 }
@@ -60,7 +69,7 @@ body {
 .article__description {
   background: rgba(255, 0, 0, 0.5);
   padding: 16px;
-  margin: 4px;
+  margin: 8px 4px;
   border-radius: 12px;
 }
 
@@ -81,54 +90,24 @@ body {
 }
 
 .article__image {
-  background: blue;
-  width 40%;
-  padding: 10px 20px;
-  display: inline-block;
-}
-
-  /* praca domowa - pusty na potrzeby przechwycenia przez JS i dodanie treści*/
-  .empty {
-    background: orange;
-    opacity: 0.7;
-    border-radius: 15px;
-    font-size: 12px;
-    color: greenyellow;
-    padding: 2px 16px;
-    text-align: center;
-    }
-
-
-
-
-
-img {
-  width: 40%;
-}
-
-
-.logo {
-  height: 200px;
-  width: auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 40%;
+  padding: 10px 20px;
+  margin: 0 auto;
 }
 
-/* niepotrzebe będzie
-.article-with-img {
-  display: flex;
-  align-items: center;
-} */
-
-
-.section-header {
-  color: limegreen;
+/* praca domowa - pusty na potrzeby przechwycenia przez JS i dodanie treści*/
+.empty {
+  background: orange;
+  opacity: 0.7;
+  border-radius: 15px;
+  font-size: 12px;
+  color: greenyellow;
+  padding: 2px 16px;
+  text-align: center;
 }
 
-.article-header {
-  color: rgb(255, 0, 242);
+.image {
+  display: block;
+  margin: 0 auto;
 }
-
-
-
