--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
 body {
   background-color: rgba(255, 255, 255, 0.2);
   background-image: url("images/mega_logo_30deg.png");
@@ -14,7 +24,13 @@ body {
 }
 
 .header {
-  background: orange;
+  /* background: #ffa500; */
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(255, 165, 0, 1) 100%
+  );
   border-radius: 12px;
   opacity: 0.7;
   margin-bottom: 4px;
@@ -22,7 +38,6 @@ body {
 
 .header__logo {
   height: 30px;
-  display: inline-block;
   float: right;
   margin-right: 12px;
   padding-top: 6px;
@@ -38,14 +53,25 @@ body {
 
 .navigation {
   font-size: 1.2em;
-  background: orange;
+  /* background: orange; */
+  background: rgb(34, 193, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(255, 165, 0, 1) 100%
+  );
   padding: 12px;
   border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 
 .navigation__link {
   display: inline-block;
+  justify-content: center;
   padding: 8px 16px;
+  margin-right: 24px;
 }
 
 .navigation__link--selected {
@@ -85,7 +111,6 @@ body {
 
 .list__item {
   margin-left: 16px;
-  
 }
 
 .table {
