--- a/style.css
+++ b/style.css
@@ -187,8 +187,16 @@ body {
 .form__item {
   display: block;
   width: 300px;
-
 }
+
+.fieldset {
+  width: 350px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+  border: 4px dotted yellow;
+}
+
 
 @media (min-width: 768px) {
   .hamburger {
