npm node-sass instaled

--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body {
   margin: 0 0 16px 0;
 }
 
+.navigation__link:hover {
+color: black
+}
+
 .navigation__link--selected {
   color: #000000;
 }
@@ -119,6 +123,7 @@ body {
   border: 4px dotted yellow;
 }
 
+
 .list {
   list-style: upper-roman;
 }
@@ -136,6 +141,26 @@ body {
   width: 100%;
   text-align: center;
 }
+
+.article__title::before {
+content: "";
+display: inline-block;
+background: blueviolet;
+width: 6px;
+height: 12px;
+margin-right: 2px;
+}
+
+.article__title::after {
+  content: "";
+  display: inline-block;
+  background: blueviolet;
+  width: 6px;
+  height: 12px;
+  margin-left: 2px;
+}
+
+
 
 .wrapper {
   width: 100%;
@@ -175,7 +200,7 @@ body {
 
 /* week six homework - grid added to second section */
 
-.section--grid {
+.grid {
   background: grey;
   display: block;
 }
@@ -227,15 +252,19 @@ body {
     margin-right: 24px;
   }
 
+  .navigation__link:hover {
+color: black;
+  }
+
   .navigation__link--selected {
     background: rgba(255, 0, 0, 0.5);
     border-radius: 10px;
   }
 
-  .section--grid {
+ .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 2em;
+    column-gap: 1em;
     background: yellow;
   }
 
